fix: requirements.txt to reduce vulnerabilities
The following vulnerabilities are fixed by pinning transitive dependencies:
- https://snyk.io/vuln/SNYK-PYTHON-ECDSA-511942
- https://snyk.io/vuln/SNYK-PYTHON-ECDSA-535624
- https://snyk.io/vuln/SNYK-PYTHON-ECDSA-540493
- https://snyk.io/vuln/SNYK-PYTHON-PYYAML-550022
- https://snyk.io/vuln/SNYK-PYTHON-PYYAML-559098

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ service
 pika
 jsonschema
 strict_rfc3339
-pyyaml==5.1
+pyyaml==5.2
 pytz
 click
 
 bookiesports
 bos-incidents>=0.1.0
 pycryptodome==3.8.0
+
+ecdsa>=0.14 # not directly required, pinned by Snyk to avoid a vulnerability
